--- a/content/post/2021-07-23-introducing-the-redwall-red-flag-analyzer-with-new-constructs-data/index.Rmd
+++ b/content/post/2021-07-23-introducing-the-redwall-red-flag-analyzer-with-new-constructs-data/index.Rmd
@@ -2,13 +2,27 @@
 title: "Introducing the Redwall 'Red Flag' Explorer with New Constructs Data"
 author: "David Lucey"
 date: '`r Sys.Date()`'
-categories: ["R"]
-tags: ["XBRL", "quantmod", "dataviz", "shiny"]
+categories: ["R", "Code-Oriented"]
+tags: ["XBRL", "quantmod", "dataviz", "shiny", "plotly"]
 draft: true
 slug: introducing-the-redwall-red-flag-analyzer-with-new-constructs-data
 ---
 
 [![Red Flag Explorer](images/red_flag_app.png){width="12in" height="6in"}](https://luceyda.shinyapps.io/redflagapp/)
+
+    ```{css, echo=FALSE}
+    .tab-content>.tab-pane {
+        display: block;
+        height: 0px;
+        overflow: hidden;
+        padding: 0px
+    }
+    .tab-content>.active {
+        display: block;
+        height: auto;
+        padding: 12px
+    }
+    ```
 
 <details>
 
@@ -49,17 +63,17 @@ annual_data <-
 
 A few months ago in [A Blueprint of "Red Flag" alerts Using Adjusted Earnings Data](https://redwallanalytics.com/2021/04/21/a-blueprint-of-red-flag-alerts-using-adjusted-earnings-data/), we mused about using [New Constructs](https://www.newconstructs.com) historical data to back-test ideas from a 2003 CFA Conference Proceedings article entitled [Revelations in Financial Reporting](https://www.tandfonline.com/toc/ufaj20/current) by Bruce Gulliver. This article succinctly offered the theory that, in the aftermath of the collapse of "Dot-com Bubble", impending difficulties for many stocks might have been avoided by using a simple set of financial statement ratios, collectively as "red flags". Mr. Gulliver's work always stuck with us, and especially now that R can easily be used to test the hypothesis and to take the analysis to a different scale and interactivity. The only other missing piece would be thousands of companies with consistently and meticulously adjusted financial statement data over a very long period, which as far as we know, only resides at New Constructs.
 
-After our blog post, New Constructs kindly offered to let us use their data to test the theory on a very large sample of companies and over a time period, which includes two of the great busts in recent memory. In this post, we will describe our analysis, summarize the unparalleled New Constructs data and the interactive [Red Flag Explorer](https://luceyda.shinyapps.io/redflagapp/) Shiny app we have built for anyone who would like to interact with the "red flags" and subsequent performance. It is striking that analysis on this scale (ie: essentially analyzing \~145,000 financial statements), impossible to produce for most of our years following markets, can now be conducted in a few weeks of coding. We think our "red flags" built on top of New Construct's data represent a unique historical fingerprint of the market's accounting behavior, and record of the price implications in the controversial post-2000 period.
+After our blog post, New Constructs kindly offered to let us use their data to test the theory on a large sample of companies and over a time period, which includes two of the great stock market busts and the recent CV-19 related stop. In this post, we will describe our analysis, summarize the unparalleled New Constructs data and the interactive [Red Flag Explorer](https://luceyda.shinyapps.io/redflagapp/) Shiny app we have built for anyone who would like to interact with the "red flags" and subsequent performance. It is striking that analysis on this scale (ie: analyzing \~145,000 financial statements), impossible for a regular person with a computer to produce (much less share with others) for most of our years following markets, can now be conducted in a few weeks of coding. We think our "red flags" built on top of New Construct's data represent a unique historical fingerprint of the market's accounting behavior, and record of the price implications in the controversial post-2000 period.
 
 # Red Flag Calculations {#red-flag-calculations}
 
 The methodology for generating "red flags" was close to what we laid out in [A Blueprint of "Red Flag" alerts Using Adjusted Earnings Data](https://redwallanalytics.com/2021/04/21/a-blueprint-of-red-flag-alerts-using-adjusted-earnings-data/), but there were several differences.
 
--   We didn't fully understand the "Revelations" [Cash Flow]{.ul} adjustments, which primarily had to do with timing differences related to the timing of expensing of employee share options. According th Mr. Gulliver's article, this became very significant during the Dot-com Bubble in many companies, but we are not sure this if it is still so, and didn't have comparable data from New Constructs to calculate it. If we were to do it again, we would have requested the data to calculate the difference between New Constructs "True Free Cash Flow" and "Traditional Free Cash Flow" as laid out in [The Most Overstated And Understated FCF In The S&P 500 Post 1Q21 Earnings](https://www.forbes.com/sites/greatspeculations/2021/06/16/the-most-overstated-and-understated-fcf-in-the-sp-500-post-1q21-earnings/?sh=536bff042be2) by David Trainer in Forbes in June. For now, our app won't have a "red flag" pertaining to Cash Flow.
+-   We didn't fully understand the "Revelations" [cash flow]{.ul} adjustments, which primarily had to do with timing differences of expensing of employee share options. According th Mr. Gulliver's article, this became very significant during the Dot-com Bubble in many companies, but we are not sure this if it is still so, and didn't have comparable data from New Constructs to calculate it. If we were to do it again, we would have requested the data to calculate the difference between New Constructs "True Free Cash Flow" and "Traditional Free Cash Flow" as laid out in [The Most Overstated And Understated FCF In The S&P 500 Post 1Q21 Earnings](https://www.forbes.com/sites/greatspeculations/2021/06/16/the-most-overstated-and-understated-fcf-in-the-sp-500-post-1q21-earnings/?sh=536bff042be2) by David Trainer (CEO of New Constructs) in the June 14th Forbes issue. For now, our app won't have a "red flag" pertaining to cash flow.
 
--   [Asset Turnover]{.ul} was calibrated relative to other companies in the sector and considering the full 20+ year period when determining unfavorable ratios.
+-   [Asset turnover]{.ul} was calibrated relative to other companies in the sector and considering the full 20+ year period when determining unfavorable ratios.
 
--   Trend-related variables (ie: increasing days of inventory/receivables, declining margins and ROIC and reserves) were calculated by taking more than one year of change into account to give an added penalty when the negative trend was persistent. This had a cost of losing some periods at the very beginning of the series (ie: 1997-1998), because those were needed for the look-back.
+-   Trend-related variables (ie: increasing days of inventory/receivables, declining margins and ROIC and declining reserves/sales ratios) were calculated by taking more than one year of change into account to give an added penalty when the negative trend was persistent. This had a cost of losing some periods at the very beginning of the series (ie: 1997-1998), because those were needed for the look-back.
 
 -   The [High Valuation]{.ul} "red flag" was calculated using New Construct's 1-5 ratings, themselves derived variables, rather than raw valuation metrics. New Constructs does not use the traditional GAAP earnings and book value ratios to determine valuation, for reasons very well discussed in the [Basic Metrics](https://www.newconstructs.com/education/basic-metrics/) section on New Construct's website.
 
@@ -69,7 +83,7 @@ The methodology for generating "red flags" was close to what we laid out in [A B
 
 -   We also added two additional "red flags" of our own, for companies having amended filings (by far the least common "red flag") and with more than two flags previously still showing filing-on-filing increases in total flags.
 
-We don't know what thresholds Mr. Gulliver would have used in his analysis, but where we had discretion, our "red flags" were calibrated to occur in about 15-20% of filings over the "whole period" (as shown in Figure \@ref(fig:red-flag-summary-chart) below). When we say "over the whole period", this is significant because it means that the cut-offs for a "red flag" is the same regardless of the reporting period. There was no special knowledge consideration given to an "informed" threshold level where past evidence supported likely problems, just that the selected metric was deviating negatively relative to the large majority of filings. Further work in this regard might even improve the quality of the signalling.
+We don't know what thresholds Mr. Gulliver would have used in his analysis, but where we had discretion, our "red flags" were calibrated to occur in about 15-20% of filings over the "whole period" (as shown in Figure \@ref(fig:red-flag-summary-chart) below). When we say "over the whole period", this is significant because it means that the cut-offs for a "red flag" is the same regardless of the reporting period. Another option would have been to calculate by period (ie: attributing a similar number of each red flag in each period), but that would have taken away the ability to compare relative behavior over time. There was no special knowledge consideration given to an "informed" threshold level where evidence supported likely problems, just that the selected metric was deviating negatively relative to the large majority of filings during the 20-year period. Further work in this regard might even improve the quality of the signalling.
 
 <details>
 
@@ -136,7 +150,7 @@ vars <-
     "trend"
   )
 
-# Add labels and tooltip to Plotly object
+# Add red flag labels and tooltip to Plotly object
 for (i in 1:10) {
   p$x$data[[i]]$name <- names[i]
   
@@ -156,11 +170,33 @@ for (i in 1:10) {
   )
 }
 p[["x"]][["layout"]][["annotations"]][[1]][["text"]] <- "Red Flag"
+
+p <- 
+  p %>% plotly::layout(
+    hoverlabel = list(align = "left"),
+    annotations =
+      list(
+        x = 1.05,
+        y = -0.10,
+        text = "Source: New Constructs",
+        showarrow = F,
+        xref = 'paper',
+        yref = 'paper',
+        xanchor = 'right',
+        yanchor = 'auto',
+        xshift = 0,
+        yshift = 0,
+        font = list(
+          size = 12,
+          color = "darkgray")
+      )
+)
+
 ```
 
 </details>
 
-```{r 'red-flag-summary-chart', echo=FALSE, fig.cap='Most Red Flag Percentages Peaked in the Early 2000s', message=FALSE, warning=FALSE}
+```{r 'red-flag-summary-chart', echo=FALSE, out.height='100%', fig.cap='Most Red Flag Percentages Peaked in the Early 2000s', message=FALSE, warning=FALSE}
 p
 ```
 
@@ -302,7 +338,8 @@ p <- annual_data_long[
         )]
 
 # Render as plotly with tooltips set in ggplot object
-p <- plotly::ggplotly(p, tooltip = c("text")) %>% 
+p <- 
+  plotly::ggplotly(p, tooltip = c("text")) %>% 
   plotly::layout(
     hoverlabel = list(align = "left"),
     annotations =
@@ -326,7 +363,7 @@ p <- plotly::ggplotly(p, tooltip = c("text")) %>%
 
 </details>
 
-```{r 'summary-return-chart', echo=FALSE, fig.cap='Earliest Period Had Most Differentiation among Performances by Red Flag', message=FALSE, warning=FALSE}
+```{r 'summary-return-chart', echo=FALSE, message=FALSE, warning=FALSE, out.height='100%', fig.cap='Earliest Period Had Most Differentiation among Performances by Red Flag'}
 p
 ```
 
