--- a/content/post/2021-07-23-introducing-the-redwall-red-flag-analyzer-with-new-constructs-data/index.Rmd
+++ b/content/post/2021-07-23-introducing-the-redwall-red-flag-analyzer-with-new-constructs-data/index.Rmd
@@ -10,19 +10,19 @@ slug: introducing-the-redwall-red-flag-analyzer-with-new-constructs-data
 
 [![Red Flag Explorer](images/red_flag_app.png){width="12in" height="6in"}](https://luceyda.shinyapps.io/redflagapp/)
 
-    ```{css, echo=FALSE}
-    .tab-content>.tab-pane {
-        display: block;
-        height: 0px;
-        overflow: hidden;
-        padding: 0px
-    }
-    .tab-content>.active {
-        display: block;
-        height: auto;
-        padding: 12px
-    }
-    ```
+```{css include=FALSE}
+.tab - content > .tab - pane {
+  display:block
+  height:0px
+  overflow:hidden
+  padding:0px
+}
+.tab - content > .active {
+  display:block
+  height:auto
+  padding:12px
+}
+```
 
 <details>
 
@@ -96,12 +96,13 @@ cols <- names(red_flags)[sapply(red_flags, is.logical)]
 
 # Melt data to long on fiscal_year and total_flags
 red_flags_long <-
-  red_flags[data.table::between(fiscal_year, 1999, 2020),
-       lapply(.SD, mean),
-       .SDcols = cols,
-       fiscal_year][
-       ][order(fiscal_year)][
-       ][, data.table::melt(.SD, measure.vars = cols)]
+  red_flags[
+    data.table::between(fiscal_year, 1999, 2020),
+    lapply(.SD, mean),
+    .SDcols = cols,
+    fiscal_year][
+    ][order(fiscal_year)][
+    ][, data.table::melt(.SD, measure.vars = cols)]
 
 # Make basic ggplot on x = fiscal_year and y = total_flags.
 p <- 
@@ -171,6 +172,7 @@ for (i in 1:10) {
 }
 p[["x"]][["layout"]][["annotations"]][[1]][["text"]] <- "Red Flag"
 
+# Add "Source: New Constructs" to bottom right
 p <- 
   p %>% plotly::layout(
     hoverlabel = list(align = "left"),
@@ -367,7 +369,7 @@ p <-
 p
 ```
 
-Figure \@(fig:summary-return-chart) above shows the median returns for all companies over the 6 quarters after reporting their 10-K filing. Using the tooltip, it is possible to see the number of companies, reports and flags during the selected period on the line chart. This graphic is static and only shows only annual reports, but we will discuss how to change the parameters of the inputs using our interactive Shiny app further down to search though both annual and quarterly reports or other subsets of the data by time, company, sector, etc. In the next section, we will also discuss some of the ways that this picture probably understates the true difference in the relative performance of the "red flag" group shown in the chart.
+Figure \@ref(fig:summary-return-chart) above shows the median returns for all companies over the 6 quarters after reporting their 10-K filing. Using the tooltip, it is possible to see the number of companies, reports and flags during the selected period on the line chart. This graphic is static and only shows only annual reports, but we will discuss how to change the parameters of the inputs using our interactive Shiny app further down to search though both annual and quarterly reports or other subsets of the data by time, company, sector, etc. In the next section, we will also discuss some of the ways that this picture probably understates the true difference in the relative performance of the "red flag" group shown in the chart.
 
 # Bias From Missing Return Data {#bias-from-missing-return-data}
 
@@ -393,20 +395,20 @@ The beauty of our Shiny app is that we are able leave it for the user to explore
 
 Returns broadly become more negative relative to the index over the period measured, which is surprising. We would expect the stocks doing better and worse than the Vanguard TMI to cancel each other out, not doing particularly better or worse in aggregate during any period. If later years are selected with the app filters, the difference in median and mean returns between higher and lower flag groups seems to be smaller. In the year 2000 (the beginning of our data), there was a more significant number of companies with 5-7 "red flags", and their under-performance was startling relative to the lower flag groups. We recall the post technology bubble period as being a golden age of stock picking. After 2004 or 2005, almost all red flag groups under-performed the TMI, which we struggle to explain. Interestingly, 2020 seems to be the only year when everything reversed, and high flag actually outperformed the TMI and lower flag groups, in proportion to the number of "red flags". Certainly, when Mr. Gulliver wrote his piece, the difference was more striking, so maybe more market observers took note than we might have thought and arbitraged the effect away.
 
-# Modeling and Data Thoughts {#modeling-and-data-thoughts}
+# Thoughts about Data and Modeling {#modeling-and-data-thoughts}
 
-The model proposed by *Revelations* was rules-based, aggregating a large number of weak boolean signals. It's power comes from simplifying and systematically taking more elements over a larger number of companies than most single analysts might consider at the same time. In addition to the problem with sparsity among the higher flag groups, it isn't clear if the relationship between the number of flags and returns should be linear, and the few very filings with a high number of flags seemed to have more than a linear impact on returns. The statistical modeling tools we have learned so far rely on finding a few highly significant numeric variables, so we are not sure how to build a model where the signal derives from the sum of many weak variables.
+By collapsing the ratios down into boolean "red flags" using arbitrarily thresholds, we lost a lot of data and are not able to allow variables to interact. We are also treating all of the variables equally, when some may be more important or may have more importance in combination with others. New Constructs was kind enough to share their data, but that was on a temporary basis, so this is beyond what we can achieve in this project, but taking these into account might give a better signal of future performance.
 
-The nature of the data is also a consideration. We would like to measure our confidence that a certain number of "red flags" is better or worse than another level. The challenge is that we have the longitudinal nature of the data, and also that there are a lot fewer cases of companies with a high number of "red flags". This is a situation best addressed with a Bayesian mixture model, which would allow us to get a posterior for each "red flag" taking into account measurements during other periods and gauge our confidence in the differences of the means of the "red flag" groups. This is likely something we will try in the future, but it is still beyond our capabilities.
+The model proposed by *Revelations* was rules-based, aggregating a large number of weak boolean signals. It's power comes from simplifying and systematically taking more elements over a larger number of companies than most single analysts might consider at the same time. In addition to the problem with sparsity among the higher flag groups, it isn't clear if the relationship between the number of flags and returns should be linear, and the few very filings with a high number of flags seemed to have more than a linear impact on returns. The statistical modeling tools we have learned so far rely on finding a few highly significant numeric variables, so we are not sure how to model when the signal derives from the sum of many weak variables.
 
-Another aspect of the analysis is that by collapsing the ratios down into boolean "red flags", we lost a lot of data and the possibility to set thresholds more optimally, and are not able to allow the variables to interact. We are even treating the aggregated variables equally, when some may be more important than others, or may have more importance when interacted with others. New Constructs was kind enough to share their data, but that was on a temporary basis, so this is likely beyond what we can achieve, but we may be able to look more closely at the interactions among the variables we have already calculated.
+The nature of the data is also a consideration. We would like to measure the true impact of individual or collection of flags. The challenge is the longitudinal nature of the data, and the related sparsity of high flag data by period. This is a situation best addressed with a Bayesian mixture model, which might allow us to get a more confident posterior for the sparse flag groups by taking into account measurements from other periods and helping to gauge our confidence in the differences of means of the "red flag" groups. This is likely something we will attempt in the future.
 
 # Next Steps {#next-steps}
 
-There are so many possible next steps it is difficult to know where to start. The first place would be to find the price histories for the missing 1,600 companies. With our code in an R `{targets}` project, it would only take minutes to add these. We have included mainly accounting ratios in our analysis so far, but we could also easily add variables from other data sources, such as NLP signals such as sentiment of the MD&A, management incentive alignment measures, short interest ratios or insider selling. At the moment out of almost 145,000 filings, we found only about 1% with five or more "red flags" among the annual and quarterly data, so it might be beneficial to take into consideration more risk factors.
+There are so many possible next steps it is difficult to know where to start. The first place would be to find the price histories for the missing 1,600 companies. We have included mainly accounting ratios in our analysis so far, but we could also easily add variables from other data sources, such as NLP signals such as sentiment of the MD&A, management incentive alignment measures, short interest ratios or insider selling. At the moment out of almost 145,000 filings, we found only about 1% with five or more "red flags" among the annual and quarterly data, so it might be beneficial to take into consideration more risk factors. With our code in an R `{targets}` project, any of these additions would only take minutes to add to the app, so it becomes a living document.
 
-In our next blog post in this series, we will add a series of filters of several themes including: notorious accounting collapses, meme stocks and companies which were included for the whole period, and see what we find out. Finally, we will attempt to build the hierarchical, longitudinal mixture model in order to try to better estimate the true means of the returns of the "red flag" groups. In a Bayesian model, we should be able to share information among the sparse high flag groups in order to give ourselves more confident estimates.
+In our next blog post in this series, we will add a series of filters of several themes including: notorious accounting collapses, meme stocks, high internally-generated intangible and companies which were present over the whole period. We might add some more visualizations to the app to enable users to explore these filters. Finally, we will attempt to build the hierarchical, longitudinal mixture model as described above in order to better estimate the true means of the returns of the "red flag" groups.
 
 # Conclusion {#conclusion}
 
-When we wrote [A Blueprint of "Red Flag" alerts Using Adjusted Earnings Data](https://redwallanalytics.com/2021/04/21/a-blueprint-of-red-flag-alerts-using-adjusted-earnings-data/), it felt like our proposal was out on a limb compared to what might be achievable. Thanks to the generosity of New Constructs and the powers of R, we have taken a long-held personal research question, and built a working prototype which we can share with others and possibly add onto over time. It is possible that the disappearance of the "red flag" return spread may be an indication that others have already done this, but if it exists, we haven't seen that work in public. We will include the code for our calculations and app on Github in the future. Our work is only a back-test, so we encourage others to subscribe to New Constructs API and
+When we wrote [A Blueprint of "Red Flag" alerts Using Adjusted Earnings Data](https://redwallanalytics.com/2021/04/21/a-blueprint-of-red-flag-alerts-using-adjusted-earnings-data/), it felt like our proposal was out on a limb compared to what might be achievable. Thanks to the generosity of New Constructs and the powers of R, we have taken a long-held personal research question, and built a working prototype which we can share with others and possibly add to over time. It is possible that the shrinkage of the "red flag" return spread may be an indication that others have already done this, but if it exists, we haven't seen that work. We plan to include the code for our calculations and Shiny app, and the derived "red flag" data on Github. Our work is only a back-test, so we encourage others to subscribe to New Constructs API and their real time data to mine for accounting troubles.
